# alibabacloud-nls-sdk-demo

./: README.md
android/: .gitignore  build.gradle
android/app/: build.gradle
cpp/: CMakeLists.txt  build.sh  readme.txt
cpp/demo/: config-speechRecognizer.txt  sdkDemo.cpp  speechRecognizerDemo.cpp  speechRecognizerFileDemo.cpp  speechSynthesizerDemo.cpp  speechTranscriberDemo.cpp
cpp/include/: nlsClient.h  nlsEvent.h  nlsRequestParamKey.h  speechRecognizerRequest.h  speechSynthesizerRequest.h  speechTranscriberRequest.h
cpp/include/openssl/: evp.h  opensslconf.h
cpp/lib/linux/: libcrypto.so.1.0.0  libjsoncpp.so.0  libopus.so.0  libssl.so.1.0.0
cpp/lib/win/vs2013/x64/Debug/: nlscppsdk.lib  opus.lib
cpp/lib/win/vs2013/x64/Release/: libeay32.lib  nlscppsdk.lib
cpp/lib/win/vs2013/x86/Debug/: nlscppsdk.lib  opus.lib
cpp/lib/win/vs2013/x86/Release/: nlscppsdk.lib
cpp/lib/win/vs2015/x64/Debug/: nlscppsdk.lib
cpp/lib/win/vs2015/x64/Release/: nlscppsdk.lib  ssleay32.lib
cpp/lib/win/vs2015/x86/Debug/: nlscppsdk.lib
cpp/lib/win/vs2015/x86/Release/: nlscppsdk.lib
cpp/lib/windows/12.0/x64/Debug/: nlsCppSdk.lib
cpp/lib/windows/12.0/x64/Release/: nlsCppSdk.lib
cpp/lib/windows/12.0/x86/Debug/: nlsCppSdk.lib
cpp/lib/windows/12.0/x86/Release/: nlsCppSdk.lib
cpp/lib/windows/14.0/x64/Debug/: nlsCppSdk.lib
cpp/lib/windows/14.0/x64/Release/: gtest.lib  nlsCppSdk.lib
cpp/lib/windows/14.0/x86/Debug/: nlsCppSdk.lib
cpp/lib/windows/14.0/x86/Release/: gtest.lib  gtest_main.lib  nlsCppSdk.lib
ios/: .gitignore  NOTICE
java/: pom.xml
(+68 files in other folders)
